# actly-editor

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  update_event_bubble.py  update_timeline_event.py  version.json  vite.config.ts  vite.pages.config.ts
.github/workflows/: deploy.yml
.jules/: bolt.md  sentinel.md
dist-pages/assets/: index-BjKM7DOp.css  index-BmvKnSsP.css
docs/: agents.md  architecture.md  codex-integration.md  documentation.md  panels.md  tasks.md
pages/: index.html  landing.css
plans/: github-pages-plan.md
scripts/: version.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agents.rs  codex.rs  fs_helpers.rs  git.rs  mod.rs  tasks.rs  terminal.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_task_extras.sql  003_workspace_tasks.sql  004_add_workspace_indexes.sql
src/components/: ApprovalCard.tsx  FilePreviewModal.tsx  FormattedText.tsx  InDevelopmentBanner.tsx  MenuBar.tsx  OnboardingModal.tsx  ProjectSplash.tsx  TaskRunState.tsx  TaskTemplateSuggestions.tsx
src/layout/: ActivityBar.tsx  AppShell.tsx  WorkspaceLayout.tsx  panels.registry.ts
src/modes/: ActivityMode.tsx  CustomMode.tsx  DevelopMode.tsx  LaunchMode.tsx  MonitorMode.tsx  PlanMode.tsx
src/registries/: actions.registry.ts  agents.registry.ts  models.registry.ts  tasks.registry.ts
src/services/: actlyFs.ts  agentRunner.ts  (+6 more)
(+22 files in other folders)
